--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <div class="nav-brand">
                 <a href="index.html">
-                    <img src="assets/logo.png" alt="" srcset="">
+                    <img src="logo.png" alt="" srcset="">
                 </a>
             </div>
             <div class="nav-toggle" id="navToggle">
