--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
             <h2>Nuestras Categorías</h2>
             <div class="category-grid">
                 <div class="category-card">
-                    <img src="assets/estudiantil.jpg" alt="Electrónica">
+                    <img src="estudiantil.jpg" alt="Electrónica">
                     <h3>Estudiantil</h3>
                     <p>Guardapolvos, Camisas, Pantalones y más</p>
                 </div>
                 <div class="category-card">
-                    <img src="assets/elegante.avif" alt="Hogar">
+                    <img src="elegante.avif" alt="Hogar">
                     <h3>Elegante</h3>
                     <p>Sacos, Corbatas, Pantalones de vestir y más</p>
                 </div>
                 <div class="category-card">
-                    <img src="assets/boda.webp" alt="Oficina">
+                    <img src="boda.webp" alt="Oficina">
                     <h3>Boda</h3>
                     <p>Vestidos, Trajes y más</p>
                 </div>
