--- a/ventacorporativa.html
+++ b/ventacorporativa.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Venta Corporativa</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="logo.png type="image/x-icon">
     <style>
         :root {
   font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
@@ -172,7 +173,7 @@ button:hover {
         <nav class="navbar">
             <div class="nav-brand">
                 <a href="index.html">
-                    <img src="assets/logo.png" alt="" srcset="">
+                    <img src="logo.png" alt="" srcset="">
                 </a>
             </div>
             <div class="nav-toggle" id="navToggle">
