--- a/listanovios.html
+++ b/listanovios.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Novios - San Juan</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-<style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <style>
 *{
     margin: 0;
     padding: 0;
@@ -118,6 +118,7 @@ input:focus {
     }
 }
 </style>
+</head>
 <body>
     <header>
         <nav class="navbar">
