--- a/listanovios.html
+++ b/listanovios.html
@@ -124,7 +124,7 @@ input:focus {
         <nav class="navbar">
             <div class="nav-brand">
                 <a href="index.html">
-                    <img src="assets/logo.png" alt="" srcset="">
+                    <img src="logo.png" alt="" srcset="">
                 </a>
             </div>
             <div class="nav-toggle" id="navToggle">
