--- a/ventacorporativa.html
+++ b/ventacorporativa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Venta Corporativa</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="logo.png type="image/x-icon">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <style>
         :root {
   font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
